MT を C++ のクラスにした. #142
random-state として複数の乱数生成器を持てるようにするため、
以下の static 変数をクラスのメンバとしている。

static unsigned long X[N];
static int index;
static unsigned long mag01[2];

--- a/xyzzy.vcxproj
+++ b/xyzzy.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="src\mouse.cc" />
     <ClCompile Include="src\move.cc" />
     <ClCompile Include="src\msgbox.cc" />
+    <ClCompile Include="src\mt19937ar.cc" />
     <ClCompile Include="src\number.cc" />
     <ClCompile Include="src\oledata.cc" />
     <ClCompile Include="src\package.cc" />
@@ -381,6 +382,7 @@
     <ClInclude Include="src\mouse.h" />
     <ClInclude Include="src\mousemsg.h" />
     <ClInclude Include="src\msgbox.h" />
+    <ClInclude Include="src\mt19937ar.h" />
     <ClInclude Include="src\number.h" />
     <ClInclude Include="src\ofn.h" />
     <ClInclude Include="src\oleconv.h" />
